tests/ui/diagnostic_namespace/duplicate_coalescing.both.stderr
error[E0277]: this message
  --> $DIR/duplicate_coalescing.rs:15:17
   |
LL |     takes_trait(());
   |     ----------- ^^ this label
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Trait` is not implemented for `()`
   = note: a note
   = note: another note
help: this trait has no implementations, consider adding one
  --> $DIR/duplicate_coalescing.rs:10:1
   |
LL | trait Trait {}
   | ^^^^^^^^^^^
note: required by a bound in `takes_trait`
  --> $DIR/duplicate_coalescing.rs:12:24
   |
LL | fn takes_trait(_: impl Trait) {}
   |                        ^^^^^ required by this bound in `takes_trait`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
